--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,12 +29,36 @@ const { description, title } = Astro.props;
 
   <body class="relative text-black dark:text-white">
     <div
-      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]
+      class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]
       dark:bg-[#000000] dark:bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] dark:bg-[size:20px_20px]"
     >
     </div>
 
-   
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="0"
+      height="0"
+      style="position:absolute; overflow:hidden"
+    >
+      <defs>
+        <filter id="glass-distortion" x="0%" y="0%" width="100%" height="100%">
+          <feTurbulence
+            type="fractalNoise"
+            baseFrequency="0.008 0.008"
+            numOctaves="2"
+            seed="92"
+            result="noise"></feTurbulence>
+          <feGaussianBlur in="noise" stdDeviation="2" result="blurred"
+          ></feGaussianBlur>
+          <feDisplacementMap
+            in="SourceGraphic"
+            in2="blurred"
+            scale="77"
+            xChannelSelector="R"
+            yChannelSelector="G"></feDisplacementMap>
+        </filter>
+      </defs>
+    </svg>
 
     <Header />
     <slot />
