--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,52 +6,56 @@ import GithubIcon from "./icons/Github.astro";
 import MailIcon from "./icons/Mail.astro";
 ---
 
-<div class="max-w-150 ">
-    <div class="flex gap-4 mb-4">
+<div class="flex flex-col md:flex-row items-center gap-8 max-w-5xl justify-center">
+    <!-- Columna izquierda: imagen -->
+    <div class="flex-shrink-0 w-30 md:w-40">
         <img
-            class="rounded-full shadow-lg size-16"
+            width="300"
+            height="300"
+            class="shadow-lg size-30 md:size-40 order-1 object-cover p-1 md:order-2 lg:p-2  aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
             src="/porfolio-santos/Santos_perfil.webp"
             alt="Santos photo"
         />
-        <a
-            href="https://www.linkedin.com/in/santos-bernabeu-marroqu%C3%AD-aab13317a/"
-            target="_blank"
-            rel:"noopener"
-            class="flex items-center transition md:justify-center md:hover:scale-105"
+        <h2
+            class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
         >
-            <Badge>Disponible para trabajar</Badge>
-        </a>
+        <strong>Desarrollador Front-end</strong>
+        </h2>
     </div>
 
-    <h1
-        class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
-    >
-        Hola, soy Santos
-    </h1>
-
-    <h2
-        class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300 "
-    >
-        Estudiante de <em>Ingeniería Informática</em> y <strong>Desarrollador Front-end.</strong>
-        En constante aprendizaje y mejora de mis habilidades.
-        Soy de de Alicante, España 🏟️.
-        Especialista en crear espacios únicos.
-    </h2>
-
-    <nav class="flex gap-4 mt-8 flex-wrap">
-        <SocialPill
-            href="https://www.linkedin.com/in/santos-bernabeu-marroqu%C3%AD-aab13317a/"
+    <!-- Columna derecha: contenido -->
+    <div class="flex flex-col justify-center">
+        <h1
+            class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
         >
-            <LinkedinIcon class="size-4 md:size-6" />
-            LinkedIN
-        </SocialPill>
-        <SocialPill href="https://github.com/coyoteMMK">
-            <GithubIcon class="size-4 md:size-6" />
-            Github
-        </SocialPill>
-        <SocialPill href="mailto:santosbaden@gmail.com">
-            <MailIcon class="size-4 md:size-6" />
-            Contáctame
-        </SocialPill>
-    </nav>
+            Santos Bernabeu Marroquí
+        </h1>
+
+        <h2
+            class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+        >
+            Estudiante de <em>Ingeniería Informática</em> y <strong
+                >Desarrollador Front-end.</strong
+            >
+            En constante aprendizaje y mejora de mis habilidades. Soy de Alicante,
+            España 🏟️. Especialista en crear espacios únicos.
+        </h2>
+
+        <nav class="flex gap-4 mt-8 flex-wrap">
+            <SocialPill
+                href="https://www.linkedin.com/in/santos-bernabeu-marroqu%C3%AD-aab13317a/"
+            >
+                <LinkedinIcon class="size-4 md:size-6" />
+                LinkedIN
+            </SocialPill>
+            <SocialPill href="https://github.com/coyoteMMK">
+                <GithubIcon class="size-4 md:size-6" />
+                Github
+            </SocialPill>
+            <SocialPill href="mailto:santosbaden@gmail.com">
+                <MailIcon class="size-4 md:size-6" />
+                Contáctame
+            </SocialPill>
+        </nav>
+    </div>
 </div>
