--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -1,24 +1,44 @@
 ---
- const personalImageAlt = "Santos Bernabeu"
+const personalImageAlt = "Santos Bernabeu";
 ---
 
-<article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
+<article
+  class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
+>
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Santos pero mis amigos me llaman coyote. Desde bien pequeño me interese en el mundo del desarrollo cuando mi tio me regalo un arduino uno con el cúal empece a trastear. Actualmente estoy <strong
+      Me llamo Santos pero mis amigos me llaman coyote. Desde bien pequeño me
+      interese en el mundo del desarrollo cuando mi tio me regalo un arduino uno
+      con el cúal empece a trastear. Actualmente estoy <strong
         >terminando la carrera de ingeniería Informática</strong
       >.
     </p>
 
     <p>
       Algunos de mis éxitos incluyen <strong
-        >el fine-tuning del modelo t5 para que realize la traducción de lenguaje NL a instrucciones CODE-2</strong
-      >. Aunque no tenga gran potencia su desarrollo desde un pc doméstico es todo un éxito.
+        >el fine-tuning del modelo t5 para que realize la traducción de lenguaje
+        NL a instrucciones CODE-2</strong
+      >. Aunque no tenga gran potencia su desarrollo desde un pc doméstico es
+      todo un éxito.
+    </p>
+
+    <p>
+      Estudiante de <em>Ingeniería Informática</em> y <strong
+        >Desarrollador Front-end.</strong
+      >
+      En constante aprendizaje y mejora de mis habilidades. Soy de Alicante, España
+      🏟️. Especialista en crear espacios únicos.
     </p>
   </div>
 
-  <img width="200" height="200" src="/porfolio-santos/Santos_perfil.webp" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-
+  <img
+    width="200"
+    height="200"
+    src="/porfolio-santos/Santos_perfil.webp"
+    alt={personalImageAlt}
+    class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
+    style="object-position: 50% 50%"
+  />
 </article>
