--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -3,7 +3,7 @@ const { class: className } = Astro.props;
 ---
 <a
     style="clip-path: url(#squircleClip)"
-    class={`w-11 h-11 bg-gradient-to-br rounded-xl flex items-center justify-center shadow-lg border cursor-pointer transform transition-all duration-300 ease-out hover:scale-110 hover:-translate-y-2 hover:shadow-2xl ${className} `}	
+    class={`${className} w-11 h-11 bg-gradient-to-br rounded-xl flex items-center justify-center shadow-lg border cursor-pointer transform transition-all duration-300 ease-out hover:scale-110 hover:-translate-y-2 hover:shadow-2xl`}	
     {...Astro.props}
     target="_blank"
     rel="noopener noreferrer"
