--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -53,12 +53,12 @@ const Socialspills = [
         <h2
             class="mt-5 text-xl text-gray-800 dark:[&>strong]:text-rose-400 [&>strong]:text-rose-500 [&>strong]:font-semibold dark:text-gray-300"
         >
-            En constante aprendizaje y mejora de mis habilidades. Soy de
-            Alicante, España 🏟️. Especialista en crear espacios únicos.
+            En constante aprendizaje y mejora de mis habilidades. 
+            <p>De📍Alicante, España. Especialista en crear espacios únicos.</p>
         </h2>
 
         <!-- Nuevo SocialPuill nav -->
-        <nav class="relative flex gap-4 mt-5 flex-wrap">
+        <nav class="relative flex gap-4 mt-5 flex-wrap justify-center md:justify-start">
             <!-- Fondo del contenedor de socialPill -->
             <div
                 class="efecto-cristal rounded-2xl inset-0 relative flex items-end gap-x-4 p-2"
