--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,56 +1,115 @@
 ---
-import LinkInline from "./LinkInline.astro"
+import LinkInline from "./LinkInline.astro";
 
 interface Props {
-  title: string
-  company: string
-  description: string
-  link?: string
-  date: string
+  title: string;
+  company: string;
+  description: string;
+  link?: string;
+  date: string;
+  position?: number; // Para alternar izquierda/derecha
 }
 
-const { title, company, description, link, date } = Astro.props
+const { title, company, description, link, date, position = 0 } = Astro.props;
+const isLeft = position % 2 === 0;
 ---
 
-<div
-  class="relative mx-12 pb-20 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4"
->
-  <div class="relative pb-12 md:col-span-2">
-    <div class="sticky top-0">
-      <span class="text-yellow-400 -left-[42px] absolute rounded-full text-5xl"
-        >&bull;</span
-      >
+<div class="flex flex-col grid-cols-9 mx-auto md:grid">
+  {isLeft ? (
+    <>
+      <!-- IZQUIERDA: Content arriba, línea abajo -->
+      <div class="flex md:contents flex-row-reverse">
+        <!-- Content Box -->
+        <div class="efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-1 col-end-5 mr-auto md:mr-0 md:ml-auto">
+          <h3 class="text-rose-500 text-lg font-bold lg:text-xl">{title}</h3>
+          <h4 class="font-semibold text-lg lg:text-xl text-gray-600 dark:text-gray-400">{company}</h4>
+          <p class="mt-2 leading-6">{description}</p>
+          {link && (
+            <LinkInline href={link}>
+              Saber más{" "}
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="w-5 icon icon-tabler icon-tabler-chevron-right"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M9 6l6 6l-6 6" />
+              </svg>
+            </LinkInline>
+          )}
+          <span class="absolute text-gray-800 text-sm dark:text-white -top-5 left-2 whitespace-nowrap">{date}</span>
+        </div>
 
-      <h3 class="text-xl font-bold text-yellow-400">{title}</h3>
-      <h4 class="font-semibold text-xl text-gray-600 dark:text-white">{company}</h4>
-      <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80">{date}</time>
-    </div>
-  </div>
-  <div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3 md:mt-4">
-    {description}
-    {
-      link && (
-        <LinkInline href={link}>
-          Saber más{" "}
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="w-5 icon icon-tabler icon-tabler-chevron-right"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <>
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M9 6l6 6l-6 6" />
-            </>
-          </svg>
-        </LinkInline>
-      )
-    }
-  </div>
+        <!-- Línea y punto DEBAJO -->
+        <div class="relative col-start-5 col-end-6 mr-7 md:mx-auto">
+          <div class="flex items-center justify-center w-6 h-full">
+            <div class="w-1 h-full bg-black/80"></div>
+          </div>
+          <div class="absolute w-6 h-6 -mt-3 bg-rose-300 border-4 border-rose-400 rounded-full top-1/2"></div>
+        </div>
+      </div>
+      </>
+  ) : (
+    <>
+    <!-- DERECHA: Línea arriba, content abajo -->
+      <div class="flex md:contents">
+        <!-- Línea y punto -->
+        <div class="relative col-start-5 col-end-6 mr-7 md:mx-auto">
+          <div class="flex items-center justify-center w-6 h-full">
+              <div class="w-1 h-full bg-black/80"></div>
+            </div>
+          <div class="absolute w-6 h-6 -mt-3 bg-rose-300 border-4 border-rose-400 rounded-full top-1/2"></div>
+        </div>
+
+        <!-- Content Box -->
+        <div class="efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-6 col-end-10 mr-auto">
+          <h3 class="text-rose-500 text-lg font-bold lg:text-xl">{title}</h3>
+          <h4 class="font-semibold text-lg lg:text-xl text-gray-600 dark:text-gray-400">{company}</h4>
+          <p class="mt-2 leading-6">{description}</p>
+          {link && (
+            <LinkInline href={link}>
+              Saber más{" "}
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="w-5 icon icon-tabler icon-tabler-chevron-right"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M9 6l6 6l-6 6" />
+              </svg>
+            </LinkInline>
+          )}
+          <span class="absolute text-gray-800 text-sm dark:text-white -top-5 left-2 whitespace-nowrap">{date}</span>
+        </div>
+      </div>
+    </>
+  )}
 </div>
+
+<style>
+  .efecto-cristal::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    border-radius: inherit;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    filter: url(#glass-distortion);
+    -webkit-filter: url(#glass-distortion);
+    }
+</style>
