--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -8,19 +8,20 @@ interface Props {
   link?: string;
   date: string;
   position?: number; // Para alternar izquierda/derecha
+  isFirst?: boolean; // Para saber si es la primera experiencia
+  isLast?: boolean; // Para saber si es la última experiencia
 }
 
-const { title, company, description, link, date, position = 0 } = Astro.props;
+const { title, company, description, link, date, position = 0, isFirst,  isLast} = Astro.props;
 const isLeft = position % 2 === 0;
 ---
-
-<div class="flex flex-col grid-cols-9 mx-auto md:grid">
+<div class="flex flex-col grid-cols-9 mx-auto md:grid relative">
   {isLeft ? (
     <>
       <!-- IZQUIERDA: Content arriba, línea abajo -->
       <div class="flex md:contents flex-row-reverse">
         <!-- Content Box -->
-        <div class="efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-1 col-end-5 mr-auto md:mr-0 md:ml-auto">
+        <div class={`efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-1 col-end-5 mr-auto md:mr-0 md:ml-auto ${isFirst ? 'mt-16' : ''} ${isLast ? 'mb-16' : ''}`}>
           <h3 class="text-rose-500 text-lg font-bold lg:text-xl">{title}</h3>
           <h4 class="font-semibold text-lg lg:text-xl text-gray-600 dark:text-gray-400">{company}</h4>
           <p class="mt-2 leading-6">{description}</p>
@@ -50,7 +51,7 @@ const isLeft = position % 2 === 0;
         <!-- Línea y punto DEBAJO -->
         <div class="relative col-start-5 col-end-6 mr-7 md:mx-auto">
           <div class="flex items-center justify-center w-6 h-full">
-            <div class="w-1 h-full bg-black/80"></div>
+            <div class={`w-1 h-full bg-black/80 dark:bg-white/80 ${isFirst ? 'mask-t-from-80% ' : ''} ${isLast ? 'mask-b-from-80%' : ''}`}></div>
           </div>
           <div class="absolute w-6 h-6 -mt-3 bg-rose-300 border-4 border-rose-400 rounded-full top-1/2"></div>
         </div>
@@ -63,13 +64,13 @@ const isLeft = position % 2 === 0;
         <!-- Línea y punto -->
         <div class="relative col-start-5 col-end-6 mr-7 md:mx-auto">
           <div class="flex items-center justify-center w-6 h-full">
-              <div class="w-1 h-full bg-black/80"></div>
+              <div class={`w-1 h-full bg-black/80 dark:bg-white/80 ${isFirst ? 'mask-t-from-80% ' : ''} ${isLast ? 'mask-b-from-80%' : ''}`}></div>
             </div>
           <div class="absolute w-6 h-6 -mt-3 bg-rose-300 border-4 border-rose-400 rounded-full top-1/2"></div>
         </div>
 
         <!-- Content Box -->
-        <div class="efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-6 col-end-10 mr-auto">
+        <div class={`efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-6 col-end-10 mr-auto ${isFirst ? 'mt-16' : ''} ${isLast ? 'mb-16' : ''}`}>
           <h3 class="text-rose-500 text-lg font-bold lg:text-xl">{title}</h3>
           <h4 class="font-semibold text-lg lg:text-xl text-gray-600 dark:text-gray-400">{company}</h4>
           <p class="mt-2 leading-6">{description}</p>
@@ -111,5 +112,5 @@ const isLeft = position % 2 === 0;
     -webkit-backdrop-filter: blur(2px);
     filter: url(#glass-distortion);
     -webkit-filter: url(#glass-distortion);
-    }
+  }
 </style>
