feat: nuevo grid para proyectos

--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -21,7 +21,7 @@ const isLeft = position % 2 === 0;
       <!-- IZQUIERDA: Content arriba, línea abajo -->
       <div class="flex md:contents flex-row-reverse">
         <!-- Content Box -->
-        <div class={`efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-1 col-end-5 mr-auto md:mr-0 md:ml-auto ${isFirst ? 'mt-16' : ''} ${isLast ? 'mb-16' : ''}`}>
+        <div class={`efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-3xl col-start-1 col-end-5 mr-auto md:mr-0 md:ml-auto ${isFirst ? 'mt-16' : ''} ${isLast ? 'mb-16' : ''}`}>
           <h3 class="text-rose-500 text-lg font-bold lg:text-xl">{title}</h3>
           <h4 class="font-semibold text-lg lg:text-xl text-gray-600 dark:text-gray-400">{company}</h4>
           <p class="mt-2 leading-6">{description}</p>
@@ -70,7 +70,7 @@ const isLeft = position % 2 === 0;
         </div>
 
         <!-- Content Box -->
-        <div class={`efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-xl col-start-6 col-end-10 mr-auto ${isFirst ? 'mt-16' : ''} ${isLast ? 'mb-16' : ''}`}>
+        <div class={`efecto-cristal relative p-4 my-6 text-gray-800 dark:text-white rounded-3xl col-start-6 col-end-10 mr-auto ${isFirst ? 'mt-16' : ''} ${isLast ? 'mb-16' : ''}`}>
           <h3 class="text-rose-500 text-lg font-bold lg:text-xl">{title}</h3>
           <h4 class="font-semibold text-lg lg:text-xl text-gray-600 dark:text-gray-400">{company}</h4>
           <p class="mt-2 leading-6">{description}</p>
